--- a/eval-saved-idata-v2.ipynb
+++ b/eval-saved-idata-v2.ipynb
@@ -9,22 +9,15 @@
    "source": [
     "import arviz as az\n",
     "import numpy as np\n",
-    "import sunode.wrappers.as_pytensor\n",
-    "\n",
-    "# from tqdm import tqdm, trange\n",
     "from tqdm.notebook import  tqdm\n",
     "from IPython.display import display as print\n",
-    "from datetime import datetime\n",
-    "\n",
-    "%config InlineBackend.figure_format = 'retina'\n",
-    "az.style.use(\"arviz-darkgrid\")\n",
-    "import core\n",
-    "\n",
-    "import importlib\n",
-    "importlib.reload(core)\n",
+    "# import importlib\n",
+    "# importlib.reload(core)\n",
     "import glob\n",
     "import pickle\n",
-    "import os\n"
+    "import os\n",
+    "\n",
+    "from core_lib import MyDataset, plot_dataset, r2_loss,get_predict_ks\n"
    ]
   },
   {
@@ -46,7 +39,7 @@
    "source": [
     "\n",
     "res_path_list = glob.glob(\"saved_idata-v2/*\")\n",
-    "dataset = core.MyDataset(\"dataset/data.csv\")\n",
+    "dataset = MyDataset(\"dataset/data.csv\")\n",
     "df = dataset.get_df()\n",
     "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
     "\n",
@@ -90,7 +83,7 @@
    ],
    "source": [
     "res_path_list = glob.glob(\"saved_idata-v2/*\")\n",
-    "dataset = core.MyDataset(\"dataset/data.csv\")\n",
+    "dataset = MyDataset(\"dataset/data.csv\")\n",
     "df = dataset.get_df()\n",
     "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
     "c0 = df[cct_names].values[0]\n",
@@ -110,7 +103,7 @@
     "res_path_list = glob.glob(\"saved_idata-v2/*\")\n",
     "\n",
     "dataset_path = \"dataset/data.csv\"\n",
-    "dataset = core.MyDataset(dataset_path)\n",
+    "dataset = MyDataset(dataset_path)\n",
     "df = dataset.get_df()\n",
     "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
     "c0 = df[cct_names].values[0]\n",
@@ -144,11 +137,11 @@
     "        continue\n",
     "    \n",
     "    idata = pickle.load(open(res_file_path, 'rb'))\n",
-    "    predict_ks = core.get_predict_ks(idata)\n",
+    "    predict_ks = get_predict_ks(idata)\n",
     "\n",
     "    ks, k_kinetics = predict_ks, k_kinetics\n",
     "\n",
-    "    _db2 = core.MyDataset(dataset_path=dataset_path)\n",
+    "    _db2 = MyDataset(dataset_path=dataset_path)\n",
     "    _db2.set_as_sim_dataset(t_eval, c0, args=(predict_ks, k_kinetics))\n",
     "    c_df = _db2.get_df()\n",
     "\n",
@@ -156,10 +149,10 @@
     "\n",
     "    r2_losses = []\n",
     "    for cct_name in cct_names:\n",
-    "        _l = core.r2_loss(df[cct_name], c_df[cct_name])\n",
+    "        _l = r2_loss(df[cct_name], c_df[cct_name])\n",
     "        line_str += f\",{_l}\"\n",
     "        r2_losses.append(_l)\n",
-    "    r2_all = core.r2_loss(df[cct_names].values, c_df[cct_names].values)\n",
+    "    r2_all = r2_loss(df[cct_names].values, c_df[cct_names].values)\n",
     "    r2_mean = np.array(r2_losses).mean()\n",
     "    line_str += f\",{r2_mean}, {r2_all}\"\n",
     "    res_csv.write(f\"{line_str}\\n\")\n",
