--- a/odes-exp01.ipynb
+++ b/odes-exp01.ipynb
@@ -6,7 +6,7 @@
    "id": "5625b3a3",
    "metadata": {},
    "source": [
-    "### PyMC原生的微分方程求解器代码示例\n",
+    "# PyMC原生的微分方程求解器代码示例\n",
     "- 速度非常非常慢\n",
     "- 要求pymc4.x\n",
     "- E5-2640v4运行80分钟没跑完"
@@ -161,6 +161,13 @@
       "Initializing NUTS using jitter+adapt_diag...\n",
       "Multiprocess sampling (4 chains in 4 jobs)\n",
       "NUTS: [sigma, R0, lambda]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Sampling 4 chains for 1_000 tune and 2_000 draw iterations (4_000 + 8_000 draws total) took 17971 seconds.\n"
      ]
     }
    ],
