--- a/odes-exp02.ipynb
+++ b/odes-exp02.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a456837c",
+   "metadata": {},
+   "source": [
+    "### 使用pymc模拟的方式求解捕食者模型\n",
+    "- 要求数据足够"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "23239e1e-3500-4e02-90a8-12f9565be6b0",
