--- a/odes-exp04 copy.ipynb
+++ b/odes-exp04 copy.ipynb
@@ -15,13 +15,13 @@
     "import numpy as np\n",
     "import pymc as pm\n",
     "import pickle\n",
-    "import core\n",
-    "import importlib\n",
-    "importlib.reload(core)\n",
     "\n",
     "%config InlineBackend.figure_format = 'retina'\n",
     "az.style.use(\"arviz-darkgrid\")\n",
-    "from IPython.display import display as print"
+    "from IPython.display import display as print\n",
+    "from core_lib import MyDataset, plot_dataset,r2_loss,get_predict_ks, get_dcdt_func_for_sunode\n",
+    "from core_lib import get_predict_starts\n",
+    "from core_lib import get_model, get_model2, distance_func, MY_EPSILON\n"
    ]
   },
   {
@@ -34,9 +34,9 @@
    "outputs": [],
    "source": [
     "db_csv_path = \"dataset/data.csv\"\n",
-    "idata_save_path = \"odes-exp04-idata-4-number-1core-c0number-halfnormks-from-core.py-success.dt\"\n",
+    "idata_save_path = \"runtime/pts/odes-exp04-idata-4-number-1core-c0number-halfnormks-from-core.py-success.dt\"\n",
     "\n",
-    "dataset_ori = core.MyDataset(db_csv_path)\n",
+    "dataset_ori = MyDataset(db_csv_path)\n",
     "df_ori = dataset_ori.get_df()\n",
     "cct_names, rates_names, error_names = dataset_ori.get_var_col_names()\n",
     "c0 = df_ori[cct_names].iloc[0].values\n"
@@ -60,7 +60,7 @@
     "# t_eval = np.linspace(0, 150, 100)\n",
     "t_eval = np.array([0.5, 48, 96, 144])\n",
     "\n",
-    "dataset = core.MyDataset(db_csv_path)\n",
+    "dataset = MyDataset(db_csv_path)\n",
     "df = dataset.get_df()\n",
     "cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
     "c0 = df[cct_names].iloc[0].values\n",
@@ -68,7 +68,7 @@
     "dataset.set_as_sim_dataset(t_eval, c0, t0=0.5, args=(ks, k_kinetics))\n",
     "df = dataset.get_df()\n",
     "\n",
-    "core.plot_dataset(dataset, dataset)"
+    "plot_dataset(dataset, dataset)"
    ]
   },
   {
@@ -80,7 +80,8 @@
    },
    "outputs": [],
    "source": [
-    "mcmc_model = core.get_model(dataset, t_eval, k_kinetics, distance=core.distance_func, epsilon=core.epsilon, k_sigma_priors=0.01, kf_type=0, c0_type=0)"
+    "\n",
+    "mcmc_model = get_model(dataset, t_eval, k_kinetics, distance=distance_func, epsilon=MY_EPSILON, k_sigma_priors=0.01, kf_type=0, c0_type=0)"
    ]
   },
   {
@@ -114,9 +115,10 @@
     }
    ],
    "source": [
-    "# print(idata_save_path)\n",
-    "# idata_lv = pickle.load(open(idata_save_path, 'rb'))\n",
-    "idata_lv = pm.sample_smc(draws=2000, chains=1, model=mcmc_model, progressbar=True)\n",
+    "print(idata_save_path)\n",
+    "idata_lv = pickle.load(open(idata_save_path, 'rb'))\n",
+    "\n",
+    "# idata_lv = pm.sample_smc(draws=2000, chains=1, model=mcmc_model, progressbar=True)\n",
     "# pickle.dump(idata_lv,open(idata_save_path, 'wb'))"
    ]
   },
@@ -555,38 +557,30 @@
     }
    ],
    "source": [
-    "ks_predict = core.get_predict_ks(idata_lv)\n",
+    "ks_predict = get_predict_ks(idata_lv)\n",
     "k_kinetics = np.repeat(1, 11).astype(np.uint8)\n",
     "t_eval = np.array([0.5, 48, 96, 144])\n",
     "\n",
-    "dataset_new = core.MyDataset(db_csv_path)\n",
+    "dataset_new = MyDataset(db_csv_path)\n",
     "cct_names, rates_names, error_names = dataset_new.get_var_col_names()\n",
     "gt_s = dataset_new.get_cct()[0]\n",
     "\n",
     "dataset_new.set_as_sim_dataset(t_eval, gt_s, args=(ks_predict, k_kinetics))\n",
     "\n",
-    "print(\"r2_loss\", core.r2_loss(dataset_new.get_cct(), dataset.get_cct()))\n",
-    "core.plot_dataset(dataset, dataset_new)\n",
+    "print(\"r2_loss\", r2_loss(dataset_new.get_cct(), dataset.get_cct()))\n",
+    "plot_dataset(dataset, dataset_new)\n",
     "\n",
     "\n",
     "t_eval_new = np.linspace(0.5, 150, 200)\n",
-    "dataset_new2 = core.MyDataset(db_csv_path)\n",
+    "dataset_new2 = MyDataset(db_csv_path)\n",
     "dataset_new2.set_as_sim_dataset(t_eval_new, gt_s, t0=0.5, args=(ks_predict, k_kinetics))\n",
-    "core.plot_dataset(dataset, dataset_new2)"
+    "plot_dataset(dataset, dataset_new2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6523e3b1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "05503e7e",
+   "id": "f0a9070e",
    "metadata": {},
    "outputs": [],
    "source": []
