--- a/research-lsq-rk.ipynb
+++ b/research-lsq-rk.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "09fda08e-37e5-470c-aca7-49be59cc4cf9",
    "metadata": {},
    "outputs": [],
@@ -54,138 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f0c5995b-88f0-4e33-abd7-f5c5873d83d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class MyDataset(object):\n",
-    "\n",
-    "    def __init__(self, dataset_path):\n",
-    "\n",
-    "        self.dataset_path = dataset_path\n",
-    "\n",
-    "        df = pd.read_csv(dataset_path)\n",
-    "        # 数据初步处理\n",
-    "        # 计算反应速率rate，初始速率固定设置为0\n",
-    "\n",
-    "        for c_i, (col_name, col_sr) in enumerate(df.items()):\n",
-    "            if \"error\" in col_name or \"time\" in col_name or \"rate\" in col_name:\n",
-    "                continue\n",
-    "            rate_col_name = f\"{col_name}_rate\"\n",
-    "            rates = []\n",
-    "            pre_t = None\n",
-    "            pre_v = None\n",
-    "            for th, (index, value) in zip(df['time'], col_sr.items()):\n",
-    "                if int(index) == 0:\n",
-    "                    rates.append(0.0)\n",
-    "                    pre_t = th\n",
-    "                    pre_v = value\n",
-    "                    continue\n",
-    "\n",
-    "                delta_t = th - pre_t\n",
-    "                delta_value = value - pre_v\n",
-    "                # print(col_name, index, pre_t, th, pre_v ,value)\n",
-    "                rates.append(delta_value / delta_t)\n",
-    "                pre_t = th\n",
-    "                pre_v = value\n",
-    "            df[rate_col_name] = rates\n",
-    "\n",
-    "        self.df = df\n",
-    "        # 准备输出值 Y\n",
-    "        self.cct_names = []\n",
-    "        for x in self.df.columns:\n",
-    "            if \"time\" in x or \"error\" in x or \"rate\" in x:\n",
-    "                continue\n",
-    "            self.cct_names.append(x)\n",
-    "        self.rates_names = [f\"{x}_rate\" for x in self.cct_names]\n",
-    "        self.error_names = [f\"{x}-error\" for x in self.cct_names]\n",
-    "\n",
-    "        self.cct = self.df[self.cct_names].values\n",
-    "        self.rates = self.df[self.rates_names].values\n",
-    "        self.errors = self.df[self.error_names].values\n",
-    "\n",
-    "    def get_rates(self):\n",
-    "        return self.rates\n",
-    "\n",
-    "    def get_df(self):\n",
-    "        return self.df\n",
-    "\n",
-    "    def get_errors(self):\n",
-    "        return self.errors\n",
-    "\n",
-    "    def get_cct(self):\n",
-    "        return self.cct\n",
-    "\n",
-    "    def get_var_col_names(self):\n",
-    "        return self.cct_names, self.rates_names, self.error_names\n",
-    "\n",
-    "    def get_weights(self):\n",
-    "        max_value = self.df[self.cct_names].describe().loc['max'].values.max()\n",
-    "\n",
-    "        vars_max = self.df[self.cct_names].describe().loc['max']\n",
-    "        weights = (max_value / vars_max).values\n",
-    "\n",
-    "        return np.array(weights)\n",
-    "\n",
-    "    def get_vars_max(self):\n",
-    "        vars_max = self.df[self.cct_names].describe().loc['max'].values\n",
-    "        return vars_max\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "1c450d25-38a7-4cdb-9e14-483b5c628fc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_target(ks, df, k_kinetics):\n",
-    "    def _swt_k_kinetics(k_i, sr_vs):\n",
-    "        kk = k_kinetics[k_i]\n",
-    "        k = ks[k_i]\n",
-    "        if kk == 0:\n",
-    "            return kk\n",
-    "        elif kk == 1:\n",
-    "            return k * sr_v\n",
-    "        elif kk == 2:\n",
-    "            return k * sr_v ** 2\n",
-    "        raise Exception(f\"unknown kinetics:{kk}\")\n",
-    "\n",
-    "    target = []  # 'xNH3', 'xNO3', 'xNO2', 'xNOrg', 'xN2', 'ANH3', 'ANO3', 'ANO2', 'ANOrg', 'AN2'\n",
-    "    for i in range(0, len(df)):\n",
-    "        sr = df.iloc[i]\n",
-    "\n",
-    "        r1 = ks[0] * sr['xN2'] if k_kinetics[0] == 1 else ks[0]\n",
-    "        r2 = ks[1] * sr['xNH3'] if k_kinetics[1] == 1 else ks[1]\n",
-    "        r3 = ks[2] * sr['xNO2'] if k_kinetics[2] == 1 else ks[2]\n",
-    "        r4 = ks[3] * sr['xNO3'] if k_kinetics[3] == 1 else ks[3]\n",
-    "        r5 = ks[4] * sr['xNO2'] if k_kinetics[4] == 1 else ks[4]\n",
-    "        r6 = ks[5] * sr['xNO2'] * sr['xNO3'] if k_kinetics[5] == 1 else ks[5]\n",
-    "        r7 = ks[6] * sr['xNO3'] if k_kinetics[6] == 1 else ks[6]\n",
-    "        r8 = ks[7] * sr['xNO3'] if k_kinetics[7] == 1 else ks[7]\n",
-    "        r9 = ks[8] * sr['xNH3'] if k_kinetics[8] == 1 else ks[8]\n",
-    "        r10 = ks[9] * sr['xNOrg'] if k_kinetics[9] == 1 else ks[9]\n",
-    "        r11 = ks[10] * sr['xNOrg'] if k_kinetics[10] == 1 else ks[10]\n",
-    "\n",
-    "        xNH3_rate = 2 * r1 + r7 + r10 - r2 - r6 - r9\n",
-    "        xNO3_rate = r3 - r7 - r4 - r8 + r11\n",
-    "        xNO2_rate = r2 + r4 - r3 - r6 - 2 * r5\n",
-    "        xNOrg_rate = r8 + r9 - r10 - r11\n",
-    "        xN2_rate = r5 + r6 - r1\n",
-    "        ANH3_rate = (2 * r1 * (sr['AN2'] - sr['ANH3']) + (sr['ANO3'] - sr['ANH3']) * r7 + (\n",
-    "                    sr['ANOrg'] - sr['ANH3']) * r10) / sr['xNH3']\n",
-    "        ANO3_rate = ((sr['ANO2'] - sr['ANO3']) * r2 + (sr['ANOrg'] - sr['ANO3']) * r11) / sr['xNO3']\n",
-    "        ANO2_rate = ((sr['ANH3'] - sr['ANO2']) * r2 + (sr['ANO3'] - sr['ANO2']) * r4) / sr['xNO2']\n",
-    "        ANOrg_rate = ((sr['ANO3'] - sr['ANOrg']) * r8 + (sr['ANH3'] - sr['ANOrg']) * r9) / sr['xNOrg']\n",
-    "        AN2_rate = ((sr['ANO2'] - sr['AN2']) * r5 + (sr['ANO2'] * sr['ANH3'] - sr['AN2']) * r6) / sr['xN2']\n",
-    "\n",
-    "        line_rate = [xNH3_rate, xNO3_rate, xNO2_rate, xNOrg_rate, xN2_rate, ANH3_rate, ANO3_rate, ANO2_rate, ANOrg_rate,\n",
-    "                     AN2_rate]\n",
-    "        target.append(line_rate)\n",
-    "    target = np.array(target)\n",
-    "    return target\n"
+    "from core_lib import MyDataset, r2_loss,  get_dcdts_for_scipy, get_target\n"
    ]
   },
   {
@@ -195,10 +69,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def r2_loss(pred, y):\n",
-    "    r2_loss = 1 - np.square(pred - y).sum() / np.square(y - np.mean(y)).sum()\n",
-    "    return r2_loss\n",
-    "\n",
     "\n",
     "def get_model(dataset, k_kinetics, k_sigma_priors=0.1, kf_type=0):\n",
     "    # 定义参数优化模型\n",
@@ -261,7 +131,6 @@
     "    idata = pm.sample(draws=draws, model=mcmc_model, chains=chains, cores=cores, tune=tune)\n",
     "    return idata\n",
     "\n",
-    "\n",
     "def eval_model(idata, dataset):\n",
     "    predict_ks = get_predict_ks(idata)\n",
     "    predict = get_target(predict_ks, df, k_kinetics)\n",
@@ -272,94 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "7b389085-39f5-49a8-b27a-f0022036688f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dcdt_func(t, c, ks, k_kinetics, switch_tc=False):\n",
-    "\n",
-    "    if switch_tc:\n",
-    "        _a = t\n",
-    "        t = c\n",
-    "        c = _a\n",
-    "\n",
-    "    c_xNH3, c_xNO3, c_xNO2, c_xNOrg, c_xN2, c_ANH3, c_ANO3, c_ANO2, c_ANOrg, c_AN2 = c\n",
-    "\n",
-    "    r1 = ks[0] * c_xN2 if k_kinetics[0] == 1 else ks[0]\n",
-    "    r2 = ks[1] * c_xNH3 if k_kinetics[1] == 1 else ks[1]\n",
-    "    r3 = ks[2] * c_xNO2 if k_kinetics[2] == 1 else ks[2]\n",
-    "    r4 = ks[3] * c_xNO3 if k_kinetics[3] == 1 else ks[3]\n",
-    "    r5 = ks[4] * c_xNO2 if k_kinetics[4] == 1 else ks[4]\n",
-    "    r6 = ks[5] * c_xNO2 * c_xNO3 if k_kinetics[5] == 1 else ks[5]\n",
-    "    r7 = ks[6] * c_xNO3 if k_kinetics[6] == 1 else ks[6]\n",
-    "    r8 = ks[7] * c_xNO3 if k_kinetics[7] == 1 else ks[7]\n",
-    "    r9 = ks[8] * c_xNH3 if k_kinetics[8] == 1 else ks[8]\n",
-    "    r10 = ks[9] * c_xNOrg if k_kinetics[9] == 1 else ks[9]\n",
-    "    r11 = ks[10] * c_xNOrg if k_kinetics[10] == 1 else ks[10]\n",
-    "\n",
-    "    dc_xNH3 = 2 * r1 + r7 + r10 - r2 - r6 - r9\n",
-    "    dc_xNO3 = r3 - r7 - r4 - r8 + r11\n",
-    "    dc_xNO2 = r2 + r4 - r3 - r6 - 2 * r5\n",
-    "    dc_xNOrg = r8 + r9 - r10 - r11\n",
-    "    dc_xN2 = r5 + r6 - r1\n",
-    "\n",
-    "    dc_ANH3 = (2 * r1 * (c_AN2 - c_ANH3) + (c_ANO3 - c_ANH3) * r7 + (c_ANOrg - c_ANH3) * r10) / c_xNH3\n",
-    "    dc_ANO3 = ((c_ANO2 - c_ANO3) * r2 + (c_ANOrg - c_ANO3) * r11) / c_xNO3\n",
-    "    dc_ANO2 = ((c_ANH3 - c_ANO2) * r2 + (c_ANO3 - c_ANO2) * r4) / c_xNO2\n",
-    "    dc_ANOrg = ((c_ANO3 - c_ANOrg) * r8 + (c_ANH3 - c_ANOrg) * r9) / c_xNOrg\n",
-    "    dc_AN2 = ((c_ANO2 - c_AN2) * r5 + (c_ANO2 * c_ANH3 - c_AN2) * r6) / c_xN2\n",
-    "\n",
-    "    dcdts = [dc_xNH3, dc_xNO3, dc_xNO2, dc_xNOrg, dc_xN2, dc_ANH3, dc_ANO3, dc_ANO2, dc_ANOrg, dc_AN2]\n",
-    "\n",
-    "    # print(y)\n",
-    "    return dcdts\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
-   "id": "c831aa3a-2d1c-4b07-9ae0-47c4d3eece8b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def dcdt_func2(c, t, ks, k_kinetics):\n",
-    "    c_xNH3, c_xNO3, c_xNO2, c_xNOrg, c_xN2, c_ANH3, c_ANO3, c_ANO2, c_ANOrg, c_AN2 = c\n",
-    "\n",
-    "    \n",
-    "    r1 = ks[0] * c_xN2 if k_kinetics[0] == 1 else ks[0]\n",
-    "    r2 = ks[1] * c_xNH3 if k_kinetics[1] == 1 else ks[1]\n",
-    "    r3 = ks[2] * c_xNO2 if k_kinetics[2] == 1 else ks[2]\n",
-    "    r4 = ks[3] * c_xNO3 if k_kinetics[3] == 1 else ks[3]\n",
-    "    r5 = ks[4] * c_xNO2 if k_kinetics[4] == 1 else ks[4]\n",
-    "    r6 = ks[5] * c_xNO2 * c_xNO3 if k_kinetics[5] == 1 else ks[5]\n",
-    "    r7 = ks[6] * c_xNO3 if k_kinetics[6] == 1 else ks[6]\n",
-    "    r8 = ks[7] * c_xNO3 if k_kinetics[7] == 1 else ks[7]\n",
-    "    r9 = ks[8] * c_xNH3 if k_kinetics[8] == 1 else ks[8]\n",
-    "    r10 = ks[9] * c_xNOrg if k_kinetics[9] == 1 else ks[9]\n",
-    "    r11 = ks[10] * c_xNOrg if k_kinetics[10] == 1 else ks[10]\n",
-    "\n",
-    "    dc_xNH3 = 2 * r1 + r7 + r10 - r2 - r6 - r9\n",
-    "    dc_xNO3 = r3 - r7 - r4 - r8 + r11\n",
-    "    dc_xNO2 = r2 + r4 - r3 - r6 - 2 * r5\n",
-    "    dc_xNOrg = r8 + r9 - r10 - r11\n",
-    "    dc_xN2 = r5 + r6 - r1\n",
-    "    dc_ANH3 = (2 * r1 * (c_AN2 - c_ANH3) + (c_ANO3 - c_ANH3) * r7 + (c_ANOrg - c_ANH3) * r10) / c_xNH3\n",
-    "    dc_ANO3 = ((c_ANO2 - c_ANO3) * r2 + (c_ANOrg - c_ANO3) * r11) / c_xNO3\n",
-    "    dc_ANO2 = ((c_ANH3 - c_ANO2) * r2 + (c_ANO3 - c_ANO2) * r4) / c_xNO2\n",
-    "    dc_ANOrg = ((c_ANO3 - c_ANOrg) * r8 + (c_ANH3 - c_ANOrg) * r9) / c_xNOrg\n",
-    "    dc_AN2 = ((c_ANO2 - c_AN2) * r5 + (c_ANO2 * c_ANH3 - c_AN2) * r6) / c_xN2\n",
-    "\n",
-    "    dcdts = [dc_xNH3, dc_xNO3, dc_xNO2, dc_xNOrg, dc_xN2, dc_ANH3, dc_ANO3, dc_ANO2, dc_ANOrg, dc_AN2]\n",
-    "\n",
-    "    # print(dcdts)\n",
-    "    # print(y)\n",
-    "    return dcdts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
    "id": "1c81a624-0229-427d-a14b-60724b2498a7",
    "metadata": {},
    "outputs": [],
@@ -367,11 +149,8 @@
     "\n",
     "def ltq_fit_rk(dataset, t_eval, c0,   k_kinetics, maxfev=2400, plot_trace=False, show_process=True, pbar=None):\n",
     "\n",
-    "\n",
     "    def _error_loss(ks, *args):\n",
-    "\n",
     "        dataset, c0, t_eval, pbar,loss_trace,r2_trace, ks_trace = args\n",
-    "\n",
     "        #------------------------\n",
     "        cct_names, rates_names, error_names = dataset.get_var_col_names()\n",
     "        df = dataset.get_df()\n",
@@ -379,11 +158,11 @@
     "        ccts = dataset.get_cct()\n",
     "        #------------------------\n",
     "\n",
-    "        # sol_res = solve_ivp(dcdt_func, (t_eval.min(), t_eval.max()), c0, t_eval=t_eval, method='Radau', args=(ks, k_kinetics))\n",
+    "        # sol_res = solve_ivp(get_dcdts_for_scipy(c_first=False), (t_eval.min(), t_eval.max()), c0, t_eval=t_eval, method='Radau', args=(ks, k_kinetics))\n",
     "        # cs = sol_res.y\n",
     "        # t_eval = sol_res.t\n",
     "\n",
-    "        res = odeint(func=dcdt_func2, y0=c0, t=t_eval, args=(ks,k_kinetics))\n",
+    "        res = odeint(func=get_dcdts_for_scipy(c_first=True), y0=c0, t=t_eval, args=(ks,k_kinetics))\n",
     "        cs = np.transpose(res, [1,0])\n",
     "\n",
     "\n",
@@ -512,7 +291,8 @@
     "k_kinetics = np.repeat(1, 11).astype(np.uint8)\n",
     "t_eval = np.arange(0.5, 150, 0.5)\n",
     "c0 = df[cct_names].iloc[0].values\n",
-    "# ks_res, r2_trace = ltq_fit_rk(dataset,t_eval, c0, k_kinetics, maxfev=5000)\n"
+    "# ks_res, r2_trace = ltq_fit_rk(dataset,t_eval, c0, k_kinetics, maxfev=5000)\n",
+    "\n"
    ]
   },
   {
@@ -602,9 +382,11 @@
     "c0 = df[cct_names].iloc[0].values\n",
     "ks_res, r2_trace = ltq_fit_rk(dataset, t_eval, c0, k_kinetics, maxfev=5000, plot_trace=False, show_process=True, pbar=None)\n",
     "\n",
+    "dcdt_func = get_dcdts_for_scipy()\n",
+    "\n",
     "\n",
     "ks = ks_res\n",
-    "res = solve_ivp(dcdt_func, (t_eval.min(), t_eval.max()), c0, method='Radau', t_eval=t_eval, args=(ks, k_kinetics))\n",
+    "res = solve_ivp(get_dcdts_for_scipy(), (t_eval.min(), t_eval.max()), c0, method='Radau', t_eval=t_eval, args=(ks, k_kinetics))\n",
     "cs = res.y\n",
     "t_eval = res.t\n",
     "\n",
@@ -616,8 +398,13 @@
     "# 10*150\n",
     "dcdt_df = pd.DataFrame(columns=['time'] + cct_names)\n",
     "\n",
+    "\n",
+    "\n",
     "for i, t in enumerate(t_eval):\n",
     "    cct = cs[:, i]\n",
+    "    \n",
+    "    \n",
+    "    \n",
     "    dcdts = dcdt_func(t, cct, ks, k_kinetics)\n",
     "    dcdt_df.loc[len(dcdt_df.index)] = [t] + dcdts\n",
     "\n",
@@ -679,7 +466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
