--- a/research-sympy.ipynb
+++ b/research-sympy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "df2a6300-2037-40fa-8c59-75762f304eee",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "355fef13-aaf7-4a8b-a579-178f09b7a8c6",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "a918bb9d-39b7-4268-87c5-d7e9f6dcfff5",
    "metadata": {},
    "outputs": [
@@ -50,7 +50,7 @@
        "Eq(f(x) - 2*Derivative(f(x), x) + Derivative(f(x), (x, 2)), sin(x))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,10 +65,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "79eee110-bd02-48bb-a874-09f73de52344",
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{d}{d x} f{\\left(x \\right)} = \\alpha g{\\left(x \\right)}$"
+      ],
+      "text/plain": [
+       "Eq(Derivative(f(x), x), alpha*g(x))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \\frac{d}{d x} g{\\left(x \\right)} = f{\\left(x \\right)}$"
+      ],
+      "text/plain": [
+       "Eq(Derivative(g(x), x), f(x))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/latex": [
@@ -98,6 +122,9 @@
     "f, g = symbols(\"f g\", cls=Function)\n",
     "x, alpha= symbols(\"x alpha\")\n",
     "eqs = [Eq(f(x).diff(x),  alpha*g(x)), Eq(g(x).diff(x), f(x))]\n",
+    "for eq in eqs:\n",
+    "    print(eq)\n",
+    "\n",
     "res = dsolve_system(eqs)\n",
     "for x in res[0]:\n",
     "    print(x)\n"
@@ -105,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "id": "3a931598-2bb0-4514-add3-98c583f3c951",
    "metadata": {},
    "outputs": [
@@ -245,9 +272,8 @@
     "            setattr(self, f'{_c}', _f(t) )\n",
     "            setattr(self, f'dc_{_c}', _f(t).diff(t) )\n",
     "        \n",
-    "def get_diff_eqs(t, c, p):\n",
+    "def get_diff_eqs(t, c, p, k_kinetics):\n",
     "    \n",
-    "    k_kinetics = np.repeat(1, 11).astype(np.uint8)\n",
     "    r1 = p.k1 * c.xN2 if k_kinetics[0] == 1 else p.k1\n",
     "    r2 = p.k2 * c.xNH3 if k_kinetics[1] == 1 else p.k2\n",
     "    r3 = p.k3 * c.xNO2 if k_kinetics[2] == 1 else p.k3\n",
@@ -278,15 +304,20 @@
     "    return dcdts\n",
     "\n",
     "t= symbols(\"t\")\n",
-    "eqs = get_diff_eqs(t,CCTS(t), Parames())\n",
-    "\n",
+    "k_kinetics = np.repeat(1, 11).astype(np.uint8)\n",
+    "eqs = get_diff_eqs(t, CCTS(t), Parames(), k_kinetics)\n",
     "for x in eqs:\n",
-    "    print(x)\n"
+    "    print(x)\n",
+    "\n",
+    "# k_kinetics = [1,1,0,1,1,0,0,1,0,1,0]\n",
+    "# eqs = get_diff_eqs(t, CCTS(t), Parames(), k_kinetics)\n",
+    "# for x in eqs:\n",
+    "#     print(x)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "3b3b89d7-5c58-479a-acb9-62cb25024a84",
    "metadata": {},
    "outputs": [
@@ -297,10 +328,10 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNotImplementedError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[20], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# dsolve(eqs)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mdsolve_system\u001b[49m\u001b[43m(\u001b[49m\u001b[43meqs\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/sympy/solvers/ode/systems.py:2116\u001b[0m, in \u001b[0;36mdsolve_system\u001b[0;34m(eqs, funcs, t, ics, doit, simplify)\u001b[0m\n\u001b[1;32m   2113\u001b[0m         sol \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   2115\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m sol \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 2116\u001b[0m         sol \u001b[38;5;241m=\u001b[39m \u001b[43m_component_solver\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcanon_eq\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfuncs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   2118\u001b[0m     sols\u001b[38;5;241m.\u001b[39mappend(sol)\n\u001b[1;32m   2120\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m sols:\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/sympy/solvers/ode/systems.py:1785\u001b[0m, in \u001b[0;36m_component_solver\u001b[0;34m(eqs, funcs, t)\u001b[0m\n\u001b[1;32m   1780\u001b[0m sol \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m   1782\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m wcc \u001b[38;5;129;01min\u001b[39;00m components:\n\u001b[1;32m   1783\u001b[0m \n\u001b[1;32m   1784\u001b[0m     \u001b[38;5;66;03m# wcc_sol: List of Equations\u001b[39;00m\n\u001b[0;32m-> 1785\u001b[0m     sol \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43m_weak_component_solver\u001b[49m\u001b[43m(\u001b[49m\u001b[43mwcc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1787\u001b[0m \u001b[38;5;66;03m# sol: List of Equations\u001b[39;00m\n\u001b[1;32m   1788\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m sol\n",
-      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/sympy/solvers/ode/systems.py:1766\u001b[0m, in \u001b[0;36m_weak_component_solver\u001b[0;34m(wcc, t)\u001b[0m\n\u001b[1;32m   1763\u001b[0m scc_sol \u001b[38;5;241m=\u001b[39m _strong_component_solver(comp_eqs, funcs, t)\n\u001b[1;32m   1765\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m scc_sol \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1766\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mNotImplementedError\u001b[39;00m(filldedent(\u001b[38;5;124m'''\u001b[39m\n\u001b[1;32m   1767\u001b[0m \u001b[38;5;124m        The system of ODEs passed cannot be solved by dsolve_system.\u001b[39m\n\u001b[1;32m   1768\u001b[0m \u001b[38;5;124m    \u001b[39m\u001b[38;5;124m'''\u001b[39m))\n\u001b[1;32m   1770\u001b[0m \u001b[38;5;66;03m# scc_sol: List of equations\u001b[39;00m\n\u001b[1;32m   1771\u001b[0m \u001b[38;5;66;03m# scc_sol is a solution\u001b[39;00m\n\u001b[1;32m   1772\u001b[0m sol \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m scc_sol\n",
+      "Cell \u001b[0;32mIn[17], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# dsolve(eqs)\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m dsolve_system(eqs)\n",
+      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/sympy/solvers/ode/systems.py:2116\u001b[0m, in \u001b[0;36mdsolve_system\u001b[0;34m(eqs, funcs, t, ics, doit, simplify)\u001b[0m\n\u001b[1;32m   2113\u001b[0m         sol \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m   2115\u001b[0m     \u001b[39mif\u001b[39;00m sol \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 2116\u001b[0m         sol \u001b[39m=\u001b[39m _component_solver(canon_eq, funcs, t)\n\u001b[1;32m   2118\u001b[0m     sols\u001b[39m.\u001b[39mappend(sol)\n\u001b[1;32m   2120\u001b[0m \u001b[39mif\u001b[39;00m sols:\n",
+      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/sympy/solvers/ode/systems.py:1785\u001b[0m, in \u001b[0;36m_component_solver\u001b[0;34m(eqs, funcs, t)\u001b[0m\n\u001b[1;32m   1780\u001b[0m sol \u001b[39m=\u001b[39m []\n\u001b[1;32m   1782\u001b[0m \u001b[39mfor\u001b[39;00m wcc \u001b[39min\u001b[39;00m components:\n\u001b[1;32m   1783\u001b[0m \n\u001b[1;32m   1784\u001b[0m     \u001b[39m# wcc_sol: List of Equations\u001b[39;00m\n\u001b[0;32m-> 1785\u001b[0m     sol \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m _weak_component_solver(wcc, t)\n\u001b[1;32m   1787\u001b[0m \u001b[39m# sol: List of Equations\u001b[39;00m\n\u001b[1;32m   1788\u001b[0m \u001b[39mreturn\u001b[39;00m sol\n",
+      "File \u001b[0;32m~/miniconda3/envs/pymcmain/lib/python3.9/site-packages/sympy/solvers/ode/systems.py:1766\u001b[0m, in \u001b[0;36m_weak_component_solver\u001b[0;34m(wcc, t)\u001b[0m\n\u001b[1;32m   1763\u001b[0m scc_sol \u001b[39m=\u001b[39m _strong_component_solver(comp_eqs, funcs, t)\n\u001b[1;32m   1765\u001b[0m \u001b[39mif\u001b[39;00m scc_sol \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1766\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mNotImplementedError\u001b[39;00m(filldedent(\u001b[39m'''\u001b[39m\n\u001b[1;32m   1767\u001b[0m \u001b[39m        The system of ODEs passed cannot be solved by dsolve_system.\u001b[39m\n\u001b[1;32m   1768\u001b[0m \u001b[39m    \u001b[39m\u001b[39m'''\u001b[39m))\n\u001b[1;32m   1770\u001b[0m \u001b[39m# scc_sol: List of equations\u001b[39;00m\n\u001b[1;32m   1771\u001b[0m \u001b[39m# scc_sol is a solution\u001b[39;00m\n\u001b[1;32m   1772\u001b[0m sol \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m scc_sol\n",
       "\u001b[0;31mNotImplementedError\u001b[0m: \nThe system of ODEs passed cannot be solved by dsolve_system."
      ]
     }
@@ -312,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "4ec99140-7cd0-4422-946b-47d1f8b46660",
    "metadata": {},
    "outputs": [
@@ -371,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "c1a6a492-d499-465a-95b5-6785dc7ad795",
    "metadata": {},
    "outputs": [
